Merged Phase_III into ES-5-history